--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
 
 				<div class="header__menu-personal">			
 					<a class="header__menu-personal-link inline-link link-search" href="#id-search-text" title="Поиск">Поиск</a>	
-					<form class="form-search gllacy-form" id="id-search-form">
+					<form class="form-search gllacy-form" id="id-search-form" method="post" action="https://echo.htmlacademy.ru">
 						<label class="visually-hidden" for="id-search-text">Текст для поиска</label>
 						<input class="form-search-text text-field" type="search" id="id-search-text" placeholder="Что ищем" title="Введите текст для поиска">
 					</form>				
 
 					<a class="header__menu-personal-link inline-link btn link-entrance" href="#id-entrance-email" title="Авторизация">Вход</a>			
-					<form class="form-entrance gllacy-form" id="id-form-entrance">
+					<form class="form-entrance gllacy-form" id="id-form-entrance" method="post" action="https://echo.htmlacademy.ru">
 						<label class="visually-hidden" for="id-entrance-email">Электронная почта</label>
 						<input class="form-entrance-email text-field" type="email" id="id-entrance-email" placeholder="Электронная почта" title="Введите адрес электронной почты"  required>		
 						<label class="visually-hidden" for="id-entrance-password">Пароль</label>
@@ -154,7 +154,7 @@
 				<a class="other__item-new-details" href="#">10 способов сервировки фруктовых щербетов к столу</a>	
 			</article>				 
 
-			<form class="other__item-subscribe other__item">
+			<form class="other__item-subscribe other__item"  method="post" action="https://echo.htmlacademy.ru">
 				<h2 class="visually-hidden">Подписка на рассылку</h2>			
 				<p class="other__item-subscribe-text">Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не cпамить и не слать всякой ненужной ерунды. Честно=)
 				</p>	
@@ -208,10 +208,11 @@
 
 		</footer>
 
-		<form class="gllacy-form form-feedback" id="id-form-feedback">
+		<form class="gllacy-form form-feedback" id="id-form-feedback"  method="post" action="https://echo.htmlacademy.ru">
 			<h2 class="visually-hidden">Форма обратной связи</h2>
-			<button class="form-feedback-close" type="button" title="Закрыть форму обратной связи">
-				<img src="img/close.svg" width="17" height="17" alt="Закрыть">
+			<button class="form-feedback-close btn-close" type="button" title="Закрыть форму обратной связи">
+				<span class="visually-hidden">Закрыть</span>
+				<!--<img src="img/close.svg" width="17" height="17" alt="Закрыть">-->
 			</button>
 			<p class="form-feedback-title">Мы обязательно Вам ответим!</p>
 			<label class="visually-hidden" for="id-feedback-name">Ваше имя</label>	
