--- a/catalog.html
+++ b/catalog.html
@@ -13,7 +13,7 @@
 			<nav class="header-navigation">
 				<h2 class="visually-hidden">Главное меню, поиск, авторизация, корзина</h2>	
 				<a href="index.html" title="Главная страница">
-					<img class="header-logo" src="img/logo.svg" width="156" height="60" alt="Логотип Глэйси">
+					<img class="header-logo" src="img/logo.svg" width="154" height="64" alt="Логотип Глэйси">
 				</a>		
 
 				<ul class="main-menu">
@@ -108,67 +108,69 @@
 					<legend class="gllacy-fieldset-legend">Сортировка:</legend>					
 					<select class="filter-sorting" name="sorting" id="id-filter-sorting">
 						<option class="filter-sorting-item" value="by-popular">по популярности</option>
-						<option class="filter-sorting-item" value="by-price">сначала недорогие</option>
-						<option class="filter-sorting-item" value="by-filler">сначала дорогие</option>
+						<option class="filter-sorting-item" value="by-price">по цене</option>
+						<option class="filter-sorting-item" value="by-filler">по наполнителю</option>
 						<option class="filter-sorting-item" value="by-fatness">по жирности</option>
 					</select>			
 				</fieldset>
 
 				<fieldset class="gllacy-fieldset gllacy-fieldset-price">
-					<legend class="gllacy-fieldset-legend"><output>Цена: 100руб. - 500руб.</output></legend>
-					<input class="filter-range filter-range-1" type="range" name="filter-range-1" id="id-filter-range-1" min="0" max="1000" value="100" title="Цена от...">
-					<input class="filter-range filter-range-2" type="range" name="filter-range-2" id="id-filter-range-2" min="0" max="1000" value="500" title="Цена до...">
-				</fieldset>
+					<legend class="gllacy-fieldset-legend"><output>Цена: 100 руб. - 500 руб.</output></legend>
+					<div class="filter-ranges">
+						<input class="filter-range filter-range-1" type="range" name="filter-range-1" id="id-filter-range-1" min="0" max="1000" value="100" title="Для изменения цены нужно аккуратно спозиционировать курсор мыши у нижней части менее доступной круглой метки либо воспользоваться клавиатурой (TAB, Shift-TAB) для перехода с соседних элементов. Затем с помощью стрелок вправо и влево изменить значения. Обе метки равноценны.">
+						<input class="filter-range filter-range-2" type="range" name="filter-range-2" id="id-filter-range-2" min="0" max="1000" value="500" title="Для изменения цены нужно аккуратно спозиционировать курсор мыши у нижней части менее доступной круглой метки либо воспользоваться клавиатурой (TAB, Shift-TAB) для перехода с соседних элементов. Затем с помощью стрелок вправо и влево изменить значения. Обе метки равноценны.">
+					</div> 					
+				</fieldset> 
 
-				<fieldset class="gllacy-fieldset gllacy-fatness">
-					<legend class="gllacy-fieldset-legend">Жирность:</legend>
-					<ul class="filter-radios">
-						<li class="filter-option-radio">						
+				<!--<fieldset class="gllacy-fieldset gllacy-fatness">
+					<legend class="gllacy-fieldset-legend">Жирность:</legend> -->
+					<ul class="filter-section filter-radios" data-title="Жирность:">
+						<li class="filter-option">						
 							<input class="filter-radio" type="radio" id="id-radio-1" name="fatness">
 							<label for="id-radio-1">0%</label>
 						</li>				
-						<li class="filter-option-radio">						
+						<li class="filter-option">						
 							<input class="filter-radio" type="radio" id="id-radio-2" name="fatness" checked>
 							<label for="id-radio-2">до 10%</label>
 						</li>				
-						<li class="filter-option-radio">						
+						<li class="filter-option">						
 							<input  class="filter-radio" type="radio" id="id-radio-3" name="fatness">
 							<label for="id-radio-3">до 30%</label>
 						</li>				
-						<li class="filter-option-radio">						
+						<li class="filter-option">						
 							<input class="filter-radio" type="radio" id="id-radio-4" name="fatness">
 							<label for="id-radio-4">выше 30%</label>
 						</li>										
 					</ul>
-				</fieldset>				
+				<!--</fieldset>			-->	
 			</div>		
 
 			<div class="filter-row">
-				<fieldset class="gllacy-fieldset">
-					<legend class="gllacy-fieldset-legend">Наполнители:</legend>
-					<ul class="filter-options">
-						<li class="filter-option-check">						
+				<!--<fieldset class="gllacy-fieldset">
+					<legend class="gllacy-fieldset-legend">Наполнители:</legend>-->
+					<ul class="filter-section filter-checkboxes fillers" data-title="Наполнители:">
+						<li class="filter-option">						
 							<input class="filter-checkbox" type="checkbox" id="id-check-1" name="filler-1" checked>
 							<label for="id-check-1">шоколадные</label>
 						</li>				
-						<li class="filter-option-check">						
+						<li class="filter-option">						
 							<input class="filter-checkbox" type="checkbox" id="id-check-2" name="filler-2" checked>
 							<label for="id-check-2">сахарные присыпки</label>
 						</li>				
-						<li class="filter-option-check">						
+						<li class="filter-option">						
 							<input  class="filter-checkbox" type="checkbox" id="id-check-3" name="filler-3">
 							<label for="id-check-3">фрукты</label>
 						</li>				
-						<li class="filter-option-check">						
+						<li class="filter-option">						
 							<input class="filter-checkbox" type="checkbox" id="id-check-4" name="filler-4">
 							<label for="id-check-4">сиропы</label>
 						</li>				
-						<li class="filter-option-check">						
+						<li class="filter-option">						
 							<input class="filter-checkbox" type="checkbox" id="id-check-5" name="filler-5"  disabled>
 							<label for="id-check-5">джемы</label>
 						</li>				
 					</ul>
-				</fieldset>
+			<!--	</fieldset> -->
 				<button class="filter-apply btn btn-trans-lighter btn-white-bordered btn-narrow" type="button" name="apply" title="Применить выбранные фильтры">Применить</button>
 			</div>		
 		</form>
@@ -315,7 +317,7 @@
 
 		<footer class="footer">
 			
-			<div class="social footer-part">
+			<div class="footer-part social">
 				<h2 class="visually-hidden">Наш магазин в соцсетях</h2>	
 				<a class="social-item social-item-tw inline-link" href="#" title="Twitter"><span class="visually-hidden">Twitter</span></a>
 				<a class="social-item social-item-in inline-link" href="#" title="Instagram"><span class="visually-hidden">Instagram</span></a>
