--- a/catalog.html
+++ b/catalog.html
@@ -17,9 +17,9 @@
 				</a>		
 
 				<ul class="main-menu">
-					<li><a class="menu-link current">Каталог</a></li>
-					<li><a class="menu-link" href="delivery.html">Доставка и оплата</a></li>
-					<li><a class="menu-link" href="about-company.html">О компании</a></li>
+					<li><a class="menu-link current"><span class="underlined-main">Каталог</span></a></li>
+					<li><a class="menu-link" href="delivery.html"><span class="underlined-main">Доставка и оплата</span></a></li>
+					<li><a class="menu-link" href="about-company.html"><span class="underlined-main">О компании</span></a></li>
 				</ul>
 
 				<div class="personal-menu">			
