--- a/catalog.html
+++ b/catalog.html
@@ -7,10 +7,10 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 
-	<body class="catalog-body">
-		<div class="main-wrapper">
-			<header class="catalog-header resizer">
-				<nav class="header-navigation resizer">
+	<body class="page-catalog-body">
+		<div class="gllacy-wrapper">
+			<header class="page-catalog-header resizer">
+				<nav class="header-navigation">
 					<h2 class="visually-hidden">Главное меню, поиск, авторизация, корзина</h2>	
 					<a href="index.html" title="Главная страница">
 						<img class="header-logo" src="img/logo.svg" width="154" height="64" alt="Логотип Глэйси">
@@ -96,7 +96,7 @@
 					<li class="breadcrumbs-item"><a class="breadcrumbs-link inline-link" href="#">Каталог</a></li>
 					<li class="breadcrumbs-item"><a class="breadcrumbs-link inline-link current">Сливочное</a></li>
 				</ul>
-				<h1 class="catalog-title">Сливочное мороженое</h1>	
+				<h1 class="page-catalog-title">Сливочное мороженое</h1>	
 
 			</header>		
 
@@ -176,7 +176,7 @@
 				</div>		
 			</form>
 
-			<section class="catalog">
+			<section class="catalog resizеr">
 				<h2 class="visually-hidden">Каталог. Сливочное мороженое</h2>
 				<ul class="catalog-items">
 					<li class="catalog-item">
@@ -304,7 +304,7 @@
 				</ul>	
 			</section>
 
-			<ul class="pagination">
+			<ul class="pagination resizer">
 				<li><a class="pagination-link inline-link link-disabled">&#8249;</a></li>
 				<li><a class="pagination-link inline-link current">1</a></li>
 				<li><a class="pagination-link inline-link" href="#">2</a></li>
@@ -316,7 +316,7 @@
 
 			<hr class="gllacy-hr">
 
-			<footer class="footer">
+			<footer class="footer resizer">
 
 				<ul class="footer-part footer-social">
 					<li><a class="social-item social-item-tw inline-link" href="#" title="Twitter"><span class="visually-hidden">Twitter</span></a></li>
@@ -334,7 +334,7 @@
 
 				<div class="footer-part footer-info">			
 					<a class="footer-logo" href="https://htmlacademy.ru/intensive/htmlcss" title="HTML Академия">
-						<img src="img/logo-htmlacademy.svg" width="109" height="38"  alt="Логотип HTML Academy" >
+						<img src="img/logo-htmlacademy.svg" width="108" height="38"  alt="Логотип HTML Academy" >
 					</a>
 					<p class="footer-copyright">Сделано в 
 						<a  class="on-dark" href="https://htmlacademy.ru/intensive/htmlcss" title="HTML Академия">HTML Academy</a>
