--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
 							<img class="catalog-item-img"  src="img/1.jpg" width="267" height="267" alt="Фото: мороженое Сливочное с апельсиновым джемом">
 							<p class="catalog-item-price">
 								<span class="catalog-item-price-cost">310</span>
-								<span class="catalog-item-price-currency">/</span>		
-								<span class="catalog-item-price-unit">кг</span>
+								<span class="catalog-item-price-currency"></span>		
+								<span class="catalog-item-price-unit">/ кг</span>
 							</p>
 							<a class="catalog-item-name" href="catalog-item.html">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>			
 							<a class="catalog-item-btn btn btn-red btn-normal btn-hidden btn-white-text" href="quick-view.html">Быстрый просмотр</a>
@@ -134,8 +134,8 @@
 							<img class="catalog-item-img"  src="img/2.jpg" width="267" height="267" alt="Фото: мороженое Сливочное-кофейное">
 							<p class="catalog-item-price">
 								<span class="catalog-item-price-cost">380</span>
-								<span class="catalog-item-price-currency">/</span>						
-								<span class="catalog-item-price-unit">кг</span>
+								<span class="catalog-item-price-currency"></span>						
+								<span class="catalog-item-price-unit">/кг</span>
 							</p>
 							<a class="catalog-item-name"  href="catalog-item.html">Сливочно-кофейное с кусочками шоколада</a>
 							<a class="catalog-item-btn btn btn-red btn-normal btn-hidden btn-white-text" href="quick-view.html">Быстрый просмотр</a>
@@ -144,8 +144,8 @@
 							<img class="catalog-item-img" src="img/3.jpg" width="267" height="267" alt="Фото: мороженое Сливочно-клубничное">
 							<p class="catalog-item-price">
 								<span class="catalog-item-price-cost">355</span>
-								<span class="catalog-item-price-currency">/</span>						
-								<span class="catalog-item-price-unit">кг</span>
+								<span class="catalog-item-price-currency"></span>						
+								<span class="catalog-item-price-unit">/кг</span>
 							</p>
 							<a class="catalog-item-name" href="catalog-item.html">Сливочно-клубничное с присыпкой из белого шоколада</a>
 							<a class="catalog-item-btn btn btn-red btn-normal btn-hidden btn-white-text" href="quick-view.html">Быстрый просмотр</a>
@@ -154,8 +154,8 @@
 							<img class="catalog-item-img" src="img/4.jpg" width="267" height="267" alt="Фото: мороженое Сливочное крем-брюле">
 							<p class="catalog-item-price">
 								<span class="catalog-item-price-cost">415</span>
-								<span class="catalog-item-price-currency">/</span>						
-								<span class="catalog-item-price-unit">кг</span>
+								<span class="catalog-item-price-currency"></span>						
+								<span class="catalog-item-price-unit">/кг</span>
 							</p>
 							<a class="catalog-item-name" href="catalog-item.html">Сливочное крем-брюле с карамельной подливкой</a>
 							<a class="catalog-item-btn btn btn-red btn-normal btn-hidden btn-white-text" href="quick-view.html">Быстрый просмотр</a>
