--- a/catalog.html
+++ b/catalog.html
@@ -106,73 +106,84 @@
 				<div class="filter-row">
 
 					<fieldset class="gllacy-fieldset gllacy-fieldset-sorting">							  
-						<legend class="gllacy-fieldset-legend">Сортировка:</legend>					
-						<select class="filter-sorting" name="sorting" id="id-filter-sorting">
-							<option class="filter-sorting-item" value="by-popular">по популярности</option>
-							<option class="filter-sorting-item" value="by-price">по цене</option>
-							<option class="filter-sorting-item" value="by-filler">по наполнителю</option>
-							<option class="filter-sorting-item" value="by-fatness">по жирности</option>
-						</select>			
+						<legend class="gllacy-fieldset-legend">Сортировка:</legend>		
+						<div class="gllacy-filter-wrapper">
+							<select class="filter-sorting" name="sorting" id="id-filter-sorting">
+								<option class="filter-sorting-item" value="by-popular">по популярности</option>
+								<option class="filter-sorting-item" value="by-price">по цене</option>
+								<option class="filter-sorting-item" value="by-filler">по наполнителю</option>
+								<option class="filter-sorting-item" value="by-fatness">по жирности</option>
+							</select>	
+						</div>		
 					</fieldset>
 
 					<fieldset class="gllacy-fieldset gllacy-fieldset-price">
 						<legend class="gllacy-fieldset-legend"><output id="id-filter-range-output">Цена: 100 руб. - 500 руб.</output></legend>
-						<div class="filter-ranges">
-							<input class="filter-range filter-range-1" type="range" name="filter-range-1" id="id-filter-range-1" min="0" max="1000" value="100" title="Для изменения цены нужно аккуратно спозиционировать курсор мыши у нижней части менее доступной круглой метки либо воспользоваться клавиатурой (TAB, Shift-TAB) для перехода с соседних элементов. Затем с помощью стрелок вправо-влево и клавиш PageUp-PageDown изменить значения. Обе метки равноценны." onchange="RedrawOutput()">
-							<input class="filter-range filter-range-2" type="range" name="filter-range-2" id="id-filter-range-2" min="0" max="1000" value="500" title="Для изменения цены нужно аккуратно спозиционировать курсор мыши у нижней части менее доступной круглой метки либо воспользоваться клавиатурой (TAB, Shift-TAB) для перехода с соседних элементов. Затем с помощью стрелок вправо-влево и клавиш PageUp-PageDown изменить значения. Обе метки равноценны." onchange="RedrawOutput()">
-						</div> 					
+						<div class="gllacy-filter-wrapper">
+							<div class="filter-ranges">
+								<input class="filter-range filter-range-1" type="range" name="filter-range-1" id="id-filter-range-1" min="0" max="1000" value="100" title="Для изменения цены нужно аккуратно спозиционировать курсор мыши у нижней части менее доступной круглой метки либо воспользоваться клавиатурой (TAB, Shift-TAB) для перехода с соседних элементов. Затем с помощью стрелок вправо-влево и клавиш PageUp-PageDown изменить значения. Обе метки равноценны." onchange="RedrawOutput()">
+								<input class="filter-range filter-range-2" type="range" name="filter-range-2" id="id-filter-range-2" min="0" max="1000" value="500" title="Для изменения цены нужно аккуратно спозиционировать курсор мыши у нижней части менее доступной круглой метки либо воспользоваться клавиатурой (TAB, Shift-TAB) для перехода с соседних элементов. Затем с помощью стрелок вправо-влево и клавиш PageUp-PageDown изменить значения. Обе метки равноценны." onchange="RedrawOutput()">
+							</div> 					
+						</div>
 					</fieldset> 
 
 					<fieldset class="gllacy-fieldset gllacy-fieldset-fatness">
 						<legend class="gllacy-fieldset-legend">Жирность:</legend>
-						<ul class="filter-section filter-radios" data-title="Жирность:">
-							<li class="filter-option">						
-								<input class="filter-radio" type="radio" id="id-radio-1" name="fatness">
-								<label for="id-radio-1">0%</label>
-							</li>				
-							<li class="filter-option">						
-								<input class="filter-radio" type="radio" id="id-radio-2" name="fatness" checked>
-								<label for="id-radio-2">до 10%</label>
-							</li>				
-							<li class="filter-option">						
-								<input  class="filter-radio" type="radio" id="id-radio-3" name="fatness">
-								<label for="id-radio-3">до 30%</label>
-							</li>				
-							<li class="filter-option">						
-								<input class="filter-radio" type="radio" id="id-radio-4" name="fatness">
-								<label for="id-radio-4">выше 30%</label>
-							</li>										
-						</ul>
+						<div class="gllacy-filter-wrapper">
+							<ul class="filter-section filter-radios" data-title="Жирность:">
+								<li class="filter-option">						
+									<input class="filter-radio" type="radio" id="id-radio-1" name="fatness">
+									<label for="id-radio-1">0%</label>
+								</li>				
+								<li class="filter-option">						
+									<input class="filter-radio" type="radio" id="id-radio-2" name="fatness" checked>
+									<label for="id-radio-2">до 10%</label>
+								</li>				
+								<li class="filter-option">						
+									<input  class="filter-radio" type="radio" id="id-radio-3" name="fatness">
+									<label for="id-radio-3">до 30%</label>
+								</li>				
+								<li class="filter-option">						
+									<input class="filter-radio" type="radio" id="id-radio-4" name="fatness">
+									<label for="id-radio-4">выше 30%</label>
+								</li>										
+							</ul>
+						</div>
 					</fieldset>		
 				</div>		
 
 				<div class="filter-row">
 					<fieldset class="gllacy-fieldset gllacy-fieldset-fillers">
 						<legend class="gllacy-fieldset-legend">Наполнители:</legend>
-						<ul class="filter-section filter-checkboxes fillers" data-title="Наполнители:">
-							<li class="filter-option">						
-								<input class="filter-checkbox" type="checkbox" id="id-check-1" name="filler-1" checked>
-								<label for="id-check-1">шоколадные</label>
-							</li>				
-							<li class="filter-option">						
-								<input class="filter-checkbox" type="checkbox" id="id-check-2" name="filler-2" checked>
-								<label for="id-check-2">сахарные присыпки</label>
-							</li>				
-							<li class="filter-option">						
-								<input  class="filter-checkbox" type="checkbox" id="id-check-3" name="filler-3">
-								<label for="id-check-3">фрукты</label>
-							</li>				
-							<li class="filter-option">						
-								<input class="filter-checkbox" type="checkbox" id="id-check-4" name="filler-4">
-								<label for="id-check-4">сиропы</label>
-							</li>				
-							<li class="filter-option">						
-								<input class="filter-checkbox" type="checkbox" id="id-check-5" name="filler-5"  disabled>
-								<label for="id-check-5">джемы</label>
-							</li>				
-						</ul>
+						<div class="gllacy-filter-wrapper">
+							<ul class="filter-section filter-checkboxes fillers" data-title="Наполнители:">
+								<li class="filter-option">						
+									<input class="filter-checkbox" type="checkbox" id="id-check-1" name="filler-1" checked>
+									<label for="id-check-1">шоколадные</label>
+								</li>				
+								<li class="filter-option">						
+									<input class="filter-checkbox" type="checkbox" id="id-check-2" name="filler-2" checked>
+									<label for="id-check-2">сахарные присыпки</label>
+								</li>				
+								<li class="filter-option">						
+									<input  class="filter-checkbox" type="checkbox" id="id-check-3" name="filler-3">
+									<label for="id-check-3">фрукты</label>
+								</li>				
+								<li class="filter-option">						
+									<input class="filter-checkbox" type="checkbox" id="id-check-4" name="filler-4">
+									<label for="id-check-4">сиропы</label>
+								</li>				
+								<li class="filter-option">						
+									<input class="filter-checkbox" type="checkbox" id="id-check-5" name="filler-5"  disabled>
+									<label for="id-check-5">джемы</label>
+								</li>				
+							</ul>
+						</div>
 					</fieldset>
-					<button class="filter-apply btn btn-trans-lighter btn-white-bordered btn-narrow" type="button" name="apply" title="Применить выбранные фильтры">Применить</button>
+					<fieldset class="gllacy-fieldset">
+						<legend class="gllacy-fieldset-legend">&nbsp;</legend> 
+						<button class="filter-apply btn btn-trans-lighter btn-white-bordered btn-narrow" type="button" name="apply" title="Применить выбранные фильтры">Применить</button>
+					</fieldset>
 				</div>		
 			</form>
 
@@ -183,8 +194,8 @@
 						<img class="catalog-item-img" src="img/1.jpg" width="267" height="267" alt="Фото: мороженое Сливочное с апельсиновым джемом и цитрусовой стружкой">					
 						<p class="catalog-item-price">
 							<span class="catalog-item-price-cost">310</span>
-							<span class="catalog-item-price-currency">/</span>		
-							<span class="catalog-item-price-unit">кг</span>
+							<span class="catalog-item-price-currency"></span>		
+							<span class="catalog-item-price-unit">/кг</span>
 						</p>
 						<a class="catalog-item-name" href="catalog-item.html">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>			
 						<a class="catalog-item-btn btn btn-red btn-normal btn-hidden btn-white-text" href="quick-view.html">Быстрый просмотр</a>
@@ -193,8 +204,8 @@
 						<img class="catalog-item-img" src="img/2.jpg" width="267" height="267" alt="Фото: мороженое Сливочное-кофейное  с кусочками шоколада">			
 						<p class="catalog-item-price">
 							<span class="catalog-item-price-cost">380</span>
-							<span class="catalog-item-price-currency">/</span>						
-							<span class="catalog-item-price-unit">кг</span>
+							<span class="catalog-item-price-currency"></span>						
+							<span class="catalog-item-price-unit">/кг</span>
 						</p>
 						<a class="catalog-item-name"  href="catalog-item.html">Сливочное-кофейное с кусочками шоколада</a>
 						<a class="catalog-item-btn btn btn-red btn-normal btn-hidden btn-white-text" href="quick-view.html">Быстрый просмотр</a>
@@ -203,8 +214,8 @@
 						<img class="catalog-item-img" src="img/3.jpg" width="267" height="267" alt="Фото: мороженое Сливочно-клубничное с присыпкой из белого шоколада">				
 						<p class="catalog-item-price">
 							<span class="catalog-item-price-cost">355</span>
-							<span class="catalog-item-price-currency">/</span>						
-							<span class="catalog-item-price-unit">кг</span>
+							<span class="catalog-item-price-currency"></span>						
+							<span class="catalog-item-price-unit">/кг</span>
 						</p>
 						<a class="catalog-item-name" href="catalog-item.html">Сливочно-клубничное с присыпкой из белого шоколада</a>
 						<a class="catalog-item-btn btn btn-red btn-normal btn-hidden btn-white-text" href="quick-view.html">Быстрый просмотр</a>
@@ -213,8 +224,8 @@
 						<img class="catalog-item-img"  src="img/4.jpg" width="267" height="267" alt="Фото: мороженое Сливочное крем-брюле с карамельной подливкой">						
 						<p class="catalog-item-price">
 							<span class="catalog-item-price-cost">415</span>
-							<span class="catalog-item-price-currency">/</span>						
-							<span class="catalog-item-price-unit">кг</span>
+							<span class="catalog-item-price-currency"></span>						
+							<span class="catalog-item-price-unit">/кг</span>
 						</p>
 						<a class="catalog-item-name" href="catalog-item.html">Сливочное крем-брюле с карамельной подливкой</a>
 						<a class="catalog-item-btn btn btn-red btn-normal btn-hidden btn-white-text" href="quick-view.html">Быстрый просмотр</a>
@@ -224,8 +235,8 @@
 						<img class="catalog-item-img"  src="img/5.jpg" width="267" height="267" alt="Фото: мороженое >Сливочное с брусничным джемом">						
 						<p class="catalog-item-price">
 							<span class="catalog-item-price-cost">310</span>
-							<span class="catalog-item-price-currency">/</span>		
-							<span class="catalog-item-price-unit">кг</span>
+							<span class="catalog-item-price-currency"></span>		
+							<span class="catalog-item-price-unit">/кг</span>
 						</p>
 						<a class="catalog-item-name" href="catalog-item.html">Сливочное с брусничным джемом</a>			
 						<a class="catalog-item-btn btn btn-red btn-normal btn-hidden btn-white-text" href="quick-view.html">Быстрый просмотр</a>
@@ -234,8 +245,8 @@
 						<img class="catalog-item-img"  src="img/6.jpg" width="267" height="267" alt="Фото: мороженое Сливочно-черничное с цельными ягодами черники">					
 						<p class="catalog-item-price">
 							<span class="catalog-item-price-cost">380</span>
-							<span class="catalog-item-price-currency">/</span>						
-							<span class="catalog-item-price-unit">кг</span>
+							<span class="catalog-item-price-currency"></span>						
+							<span class="catalog-item-price-unit">/кг</span>
 						</p>
 						<a class="catalog-item-name"  href="catalog-item.html">Сливочно-черничное с цельными ягодами черники</a>
 						<a class="catalog-item-btn btn btn-red btn-normal btn-hidden btn-white-text" href="quick-view.html">Быстрый просмотр</a>
@@ -244,8 +255,8 @@
 						<img class="catalog-item-img"  src="img/7.jpg" width="267" height="267" alt="Фото: мороженое Сливочно-лимонное с карамельной присыпкой">				
 						<p class="catalog-item-price">
 							<span class="catalog-item-price-cost">355</span>
-							<span class="catalog-item-price-currency">/</span>						
-							<span class="catalog-item-price-unit">кг</span>
+							<span class="catalog-item-price-currency"></span>						
+							<span class="catalog-item-price-unit">/кг</span>
 						</p>
 						<a class="catalog-item-name" href="catalog-item.html">Сливочно-лимонное с карамельной присыпкой</a>
 						<a class="catalog-item-btn btn btn-red btn-normal btn-hidden btn-white-text" href="quick-view.html">Быстрый просмотр</a>
@@ -254,8 +265,8 @@
 						<img class="catalog-item-img" src="img/8.jpg" width="267" height="267" alt="Фото: мороженое Сливочное с шоколадной стружкой">				
 						<p class="catalog-item-price">
 							<span class="catalog-item-price-cost">415</span>
-							<span class="catalog-item-price-currency">/</span>						
-							<span class="catalog-item-price-unit">кг</span>
+							<span class="catalog-item-price-currency"></span>						
+							<span class="catalog-item-price-unit">/кг</span>
 						</p>
 						<a class="catalog-item-name" href="catalog-item.html">Сливочное с шоколадной стружкой</a>
 						<a class="catalog-item-btn btn btn-red btn-normal btn-hidden btn-white-text" href="quick-view.html">Быстрый просмотр</a>
@@ -265,8 +276,8 @@
 						<img class="catalog-item-img" width="267" height="267"  src="img/9.jpg" alt="Фото: мороженое Сливочно-ванильное с кусочками шоколада">					
 						<p class="catalog-item-price">
 							<span class="catalog-item-price-cost">310</span>
-							<span class="catalog-item-price-currency">/</span>		
-							<span class="catalog-item-price-unit">кг</span>
+							<span class="catalog-item-price-currency"></span>		
+							<span class="catalog-item-price-unit">/кг</span>
 						</p>
 						<a class="catalog-item-name" href="catalog-item.html">Сливочно-ванильное с кусочками шоколада</a>			
 						<a class="catalog-item-btn btn btn-red btn-normal btn-hidden btn-white-text" href="quick-view.html">Быстрый просмотр</a>
@@ -275,8 +286,8 @@
 						<img class="catalog-item-img"  src="img/10.jpg" width="267" height="267" alt="Фото: мороженое Сливочноe с ментоловым сиропом">					
 						<p class="catalog-item-price">
 							<span class="catalog-item-price-cost">380</span>
-							<span class="catalog-item-price-currency">/</span>						
-							<span class="catalog-item-price-unit">кг</span>
+							<span class="catalog-item-price-currency"></span>						
+							<span class="catalog-item-price-unit">/кг</span>
 						</p>
 						<a class="catalog-item-name"  href="catalog-item.html">Сливочноe с ментоловым сиропом</a>
 						<a class="catalog-item-btn btn btn-red btn-normal btn-hidden btn-white-text" href="quick-view.html">Быстрый просмотр</a>
@@ -285,8 +296,8 @@
 						<img class="catalog-item-img" src="img/11.jpg" width="267" height="267" alt="Фото: мороженое Сливочное с кусочками черного шоколада">			
 						<p class="catalog-item-price">
 							<span class="catalog-item-price-cost">355</span>
-							<span class="catalog-item-price-currency">/</span>						
-							<span class="catalog-item-price-unit">кг</span>
+							<span class="catalog-item-price-currency"></span>						
+							<span class="catalog-item-price-unit">/кг</span>
 						</p>
 						<a class="catalog-item-name" href="catalog-item.html">Сливочное с кусочками черного шоколада</a>
 						<a class="catalog-item-btn btn btn-red btn-normal btn-hidden btn-white-text" href="quick-view.html">Быстрый просмотр</a>
@@ -295,8 +306,8 @@
 						<img class="catalog-item-img" src="img/12.jpg" width="267" height="267" alt="Фото: мороженое Сливочноe с мятным сиропом">				
 						<p class="catalog-item-price">
 							<span class="catalog-item-price-cost">415</span>
-							<span class="catalog-item-price-currency">/</span>						
-							<span class="catalog-item-price-unit">кг</span>
+							<span class="catalog-item-price-currency"></span>						
+							<span class="catalog-item-price-unit">/кг</span>
 						</p>
 						<a class="catalog-item-name" href="catalog-item.html">Сливочноe с мятным сиропом</a>
 						<a class="catalog-item-btn btn btn-red btn-normal btn-hidden btn-white-text" href="quick-view.html">Быстрый просмотр</a>
