--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body class="body-main-page">	
-		<input class="slider-radio" type="radio" id="id-slide-1" name="slider-control" checked hidden> 
-		<input class="slider-radio" type="radio" id="id-slide-2" name="slider-control" hidden> 
-		<input class="slider-radio" type="radio" id="id-slide-3" name="slider-control" hidden> 
+		<input class="slider-radio visually-hidden" type="radio" id="id-slide-1" name="slider-control" tabindex="-1" checked> 
+		<input class="slider-radio visually-hidden" type="radio" id="id-slide-2" name="slider-control" tabindex="-1"> 
+		<input class="slider-radio visually-hidden" type="radio" id="id-slide-3" name="slider-control" tabindex="-1"> 
 
 		<div class="gllacy-wrapper-wide">
 			<div class="gllacy-wrapper">
 				<h1 class="visually-hidden">Магазин мороженого Глэйси</h1>
-				<header class="header resizer">
+				<header class="header outer-paddingator">
 					<nav class="header-navigation">
 
 						<h2 class="visually-hidden">Главное меню, поиск, авторизация, корзина</h2>	
@@ -22,14 +22,14 @@
 
 						<ul class="main-menu">
 							<li class="submenu-entrance">
-								<a class="menu-link" href="catalog.html"><span class="underlined-main">Каталог</span></a>
+								<a class="menu-link submenu-entrance" href="catalog.html"><span class="underlined-main">Каталог</span></a>
 								<ul class="submenu">
 									<li><a class="submenu-link separated" href="#">Новинки</a></li>						
 									<li><a class="submenu-link" href="catalog.html">Сливочное</a></li>	
 									<li><a class="submenu-link" href="#">Щербеты</a></li>	
 									<li><a class="submenu-link" href="#">Фруктовый лед</a></li>	
 									<li><a class="submenu-link" href="#">Мелорин</a></li>									
-								</ul>
+								</ul>								
 							</li>
 							<li>
 								<a class="menu-link" href="delivery.html"><span class="underlined-main">Доставка и оплата</span></a>
@@ -40,14 +40,15 @@
 						</ul>
 
 						<div class="personal-menu">			
-							<a class="menu-link link-search" href="#id-search-text" title="Поиск"><span class="visually-hidden">Поиск</span></a>
-							<form class="form-search gllacy-form" id="id-search-form" method="post" action="https://echo.htmlacademy.ru">
+							<a class="menu-link link-search" href="search.html" title="Поиск"><span class="visually-hidden">Поиск</span></a>
+
+							<form class="form-search gllacy-form gllacy-block-hide" id="id-search-form" method="post" action="https://echo.htmlacademy.ru">
 								<label class="visually-hidden" for="id-search-text">Текст для поиска</label>
 								<input class="form-search-text gllacy-field" type="search" id="id-search-text" placeholder="Что ищем" title="Введите текст для поиска">
 							</form>				
 
-							<a class="menu-link link-entrance btn" href="#id-entrance-email" title="Авторизация">Вход</a>		
-							<form class="form-entrance gllacy-form" id="id-form-entrance" method="post" action="https://echo.htmlacademy.ru">
+							<a class="menu-link link-entrance btn" href="entrance.html" title="Авторизация">Вход</a>		
+							<form class="form-entrance gllacy-form gllacy-block-hide" id="id-form-entrance" method="post" action="https://echo.htmlacademy.ru">
 								<label class="visually-hidden" for="id-entrance-email">Электронная почта</label>
 								<input class="form-entrance-email gllacy-field" type="email" id="id-entrance-email" placeholder="Электронная почта" title="Введите адрес электронной почты"  required>		
 								<label class="visually-hidden" for="id-entrance-password">Пароль</label>
@@ -61,7 +62,7 @@
 								</div>				
 							</form>		
 
-							<a class="menu-link link-basket-empty btn" href="#" title="Корзина">Пусто</a>								
+							<a class="menu-link link-basket-empty btn" href="basket.html" title="Корзина">Пусто</a>								
 						</div>
 					</nav>
 
@@ -94,14 +95,14 @@
 
 				</header>
 
-				<div class="slider-controls resizer">			
+				<div class="slider-controls outer-paddingator">			
 					<h2 class="visually-hidden">Переключение декоративного слайдера</h2>
 					<label class="slider-button slider-button-1" for="id-slide-1" title="Слайд-1"><span class="visually-hidden">Слайд-1</span></label>
 					<label class="slider-button slider-button-2" for="id-slide-2" title="Слайд-2"><span class="visually-hidden">Слайд-2</span></label>
 					<label class="slider-button slider-button-3" for="id-slide-3" title="Слайд-3"><span class="visually-hidden">Слайд-3</span></label>
 				</div>	
 
-				<section class="promo resizer">			
+				<section class="promo inner-marginator">			
 					<h2 class="visually-hidden">Акции</h2>
 					<ul class="promo-items">	
 						<li class="promo-item">
@@ -117,11 +118,13 @@
 					</ul>
 				</section>
 
-				<section class="catalog resizеr">
+				<section class="catalog inner-marginator">
 					<h2 class="catalog-title visually-hidden">Каталог. Хиты.</h2>	
 					<ul class="catalog-items">
 						<li class="catalog-item hit">
-							<img class="catalog-item-img"  src="img/1.jpg" width="267" height="267" alt="Фото: мороженое Сливочное с апельсиновым джемом">
+							<p class="catalog-item-img-wrapper">
+								<img class="catalog-item-img"  src="img/1.jpg" width="267" height="267" alt="Фото: мороженое Сливочное с апельсиновым джемом">									
+							</p>
 							<p class="catalog-item-price">
 								<span class="catalog-item-price-cost">310</span>
 								<span class="catalog-item-price-currency"></span>		
@@ -131,7 +134,9 @@
 							<a class="catalog-item-btn btn btn-red btn-normal btn-hidden btn-white-text" href="quick-view.html">Быстрый просмотр</a>
 						</li>
 						<li class="catalog-item hit">
-							<img class="catalog-item-img"  src="img/2.jpg" width="267" height="267" alt="Фото: мороженое Сливочное-кофейное">
+							<p class="catalog-item-img-wrapper">
+								<img class="catalog-item-img"  src="img/2.jpg" width="267" height="267" alt="Фото: мороженое Сливочное-кофейное">
+							</p>
 							<p class="catalog-item-price">
 								<span class="catalog-item-price-cost">380</span>
 								<span class="catalog-item-price-currency"></span>						
@@ -141,7 +146,9 @@
 							<a class="catalog-item-btn btn btn-red btn-normal btn-hidden btn-white-text" href="quick-view.html">Быстрый просмотр</a>
 						</li>
 						<li class="catalog-item hit">
-							<img class="catalog-item-img" src="img/3.jpg" width="267" height="267" alt="Фото: мороженое Сливочно-клубничное">
+							<p class="catalog-item-img-wrapper">
+								<img class="catalog-item-img" src="img/3.jpg" width="267" height="267" alt="Фото: мороженое Сливочно-клубничное">
+							</p>
 							<p class="catalog-item-price">
 								<span class="catalog-item-price-cost">355</span>
 								<span class="catalog-item-price-currency"></span>						
@@ -151,7 +158,9 @@
 							<a class="catalog-item-btn btn btn-red btn-normal btn-hidden btn-white-text" href="quick-view.html">Быстрый просмотр</a>
 						</li>
 						<li class="catalog-item hit">
-							<img class="catalog-item-img" src="img/4.jpg" width="267" height="267" alt="Фото: мороженое Сливочное крем-брюле">
+							<p class="catalog-item-img-wrapper">
+								<img class="catalog-item-img" src="img/4.jpg" width="267" height="267" alt="Фото: мороженое Сливочное крем-брюле">
+							</p>
 							<p class="catalog-item-price">
 								<span class="catalog-item-price-cost">415</span>
 								<span class="catalog-item-price-currency"></span>						
@@ -163,8 +172,7 @@
 					</ul>	
 				</section>
 
-
-				<div class="about resizer">
+				<div class="about outer-paddingator">
 					<section class="about-content">					
 						<h2 class="about-title">Магазин Глэйси - это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h2>					
 						<ul class="about-items">
@@ -176,7 +184,7 @@
 					</section>	
 				</div>
 
-				<div class="other resizer">	
+				<div class="other inner-marginator">	
 					<article class="other-item-new other-item">				
 						<h2 class="other-item-new-title">Новое в нашем блоге</h2>
 						<p class="other-item-new-details"><a class=" on-light" href="#">10 способов сервировки фруктовых щербетов к столу</a></p>	
@@ -191,9 +199,8 @@
 				</div>
 			</div>
 
-			<section class="map">
+			<section class="map nothing-doingator">
 				<h2 class="map-title visually-hidden">Как найти</h2>		
-
 				<div class="map-info-wrapper">			
 					<div class="map-info shadowed">
 						<p class="map-info-p">
@@ -207,14 +214,14 @@
 						<p class="map-info-p">Для заказов по телефону:</p>
 						<p class="map-info-p-bold">8 812 450-25-25</p>
 						<p class="map-info-p">(c 10 до 20, ежедневно)</p>		
-						<a class="map-info-feedback btn btn-red btn-normal on-white-back" href="#id-feedback-name">Форма обратной связи</a>
+						<a class="map-info-feedback btn btn-red btn-normal on-white-back" href="feedback.html">Форма обратной связи</a>
 					</div>			
 				</div> 
 				<img class="map-img" src="img/map.jpg" width="1200" height="430" alt="Наш магазин на карте (г.Санкт-Петербург, Ул. Большая Конюшенная, 19-8)">	
 			</section>
 
 			<div class="gllacy-wrapper">
-				<footer class="footer resizеr">
+				<footer class="footer inner-marginator">
 					<ul class="footer-part footer-social">
 						<li><a class="social-item social-item-tw inline-link" href="#" title="Twitter"><span class="visually-hidden">Twitter</span></a></li>
 						<li><a class="social-item social-item-in inline-link" href="#" title="Instagram"><span class="visually-hidden">Instagram</span></a></li>
@@ -246,7 +253,7 @@
 
 		</div>
 
-		<form class="gllacy-form form-feedback" id="id-form-feedback"  method="post" action="https://echo.htmlacademy.ru">
+		<form class="form-feedback gllacy-form gllacy-flex-hide" id="id-form-feedback"  method="post" action="https://echo.htmlacademy.ru">
 			<h2 class="visually-hidden">Форма обратной связи</h2>
 			<button class="form-feedback-close btn-close" type="button" title="Закрыть форму обратной связи">
 				<span class="visually-hidden">Закрыть</span>			
@@ -260,6 +267,6 @@
 			<textarea class="form-feedback-text  form-feedback-item gllacy-field" id="id-feedback-text" rows="8" placeholder="Напишите что-нибудь..." title="Введите текст Вашего сообщения" required></textarea>
 			<button class="form-feedback-button btn btn-red btn-normal inline-link on-white-back" type="submit" title="Отправить сообщение">Отправить</button>
 		</form>	
-
+	  <script src="js/script.js"></script>
 	</body>
 </html>
