Работа по замчечаниям + разное
Исправлено состояние наведения в главном меню, убраны специфические состояния красных кнопок на белом и темном фоне, изменен фон в блоке other, уточнены размеры чекбоксов и радиокнопок, ширина у форм входа и поиска сделана одинаковой. Добавлена анимация появления формы и по двойному клику переключение между интерактивной (iframe) и обычной картой. Попасть в формы можно по клику на пунктах персонального меню, но...

--- a/catalog.html
+++ b/catalog.html
@@ -55,9 +55,9 @@
 							</div>				
 						</form>		
 
-						<a class="menu-link link-basket-full" href="basket.html" title="Корзина">2 товара</a>
-						<form class="form-basket gllacy-form gllacy-block-hide" id="id-form-basket"  method="post" action="https://echo.htmlacademy.ru">
-							<h2 class="visually-hidden">Корзина. Цены и суммы - в рублях, количество - в килограммах.</h2>
+						<a class="menu-link link-basket-full" href="basket-full.html" title="Корзина">2 товара</a>
+						<form class="form-basket gllacy-form gllacy-flex-hide" id="id-form-basket"  method="post" action="https://echo.htmlacademy.ru">
+							<h2 class="visually-hidden">Корзина. Цены и суммы - в рублях, количество - в килограммах.</h2>							
 							<table class="form-basket-table">
 								<tr class="form-basket-row">
 									<td class="form-basket-cell">
@@ -89,7 +89,7 @@
 								</tr>							
 							</table>
 							<p class="form-basket-total">Итого: 750 руб</p>
-							<button class="form-basket-btn btn btn-red btn-normal inline-link on-white-back" type="submit" id="id-basket-submit" title="Оформить заказ по содержимому корзины">Оформить заказ</button>
+							<button class="form-basket-btn btn btn-red btn-normal inline-link on-white-back" type="submit" id="id-basket-submit" title="Оформить заказ по содержимому корзины">Оформить заказ</button>					
 						</form>			
 					</div>
 				</nav>
@@ -391,6 +391,6 @@
 				</div>		
 			</footer>
 		</div>
-		<!--<script src="js/script.js"></script>-->
+		<script src="js/script.js"></script>
 	</body>
 </html>
