--- a/index.html
+++ b/index.html
@@ -40,29 +40,30 @@
 						</ul>
 
 						<div class="personal-menu">			
-							<a class="menu-link link-search" href="search.html" title="Поиск"><span class="visually-hidden">Поиск</span></a>
+						<a class="menu-link link-search btn" href="search.html" title="Поиск"><span class="visually-hidden">Поиск</span></a>	
 
-							<form class="form-search gllacy-form gllacy-block-hide" id="id-search-form" method="post" action="https://echo.htmlacademy.ru">
-								<label class="visually-hidden" for="id-search-text">Текст для поиска</label>
-								<input class="form-search-text gllacy-field" type="search" id="id-search-text" placeholder="Что ищем" title="Введите текст для поиска">
-							</form>				
+						<form class="form-search gllacy-form gllacy-block-hide" id="id-search-form" method="post" action="https://echo.htmlacademy.ru">
+							<label class="visually-hidden" for="id-search-text">Текст для поиска</label>
+							<input class="form-search-text gllacy-field" type="search" id="id-search-text" placeholder="Что ищем" title="Введите текст для поиска">
+						</form>				
 
-							<a class="menu-link link-entrance btn" href="entrance.html" title="Авторизация">Вход</a>		
-							<form class="form-entrance gllacy-form gllacy-block-hide" id="id-form-entrance" method="post" action="https://echo.htmlacademy.ru">
-								<label class="visually-hidden" for="id-entrance-email">Электронная почта</label>
-								<input class="form-entrance-email gllacy-field" type="email" id="id-entrance-email" placeholder="Электронная почта" title="Введите адрес электронной почты"  required>		
-								<label class="visually-hidden" for="id-entrance-password">Пароль</label>
-								<input class="form-entrance-password gllacy-field" type="password" id="id-entrance-password" placeholder="Пароль" title="Введите пароль" required>						
-								<div class="form-entrance-controls">
-									<button class="form-entrance-button btn btn-red btn-normal inline-link on-white-back" type="submit" title="Выполнить вход">Войти</button>
-									<div class="form-entrance-link-wrapper vertical">
-										<a class="form-entrance-link" href="#" title="Восстановление забытого пароля">Забыли пароль</a>
-										<a class="form-entrance-link" href="#" title="Новая регистрация">Новая регистрация</a>							
-									</div>
-								</div>				
-							</form>		
+						<a class="menu-link link-entrance btn" href="entrance.html" title="Авторизация">Вход</a>			
 
-							<a class="menu-link link-basket-empty btn" href="basket.html" title="Корзина">Пусто</a>								
+						<form class="form-entrance gllacy-form gllacy-block-hide" id="id-form-entrance" method="post" action="https://echo.htmlacademy.ru">
+							<label class="visually-hidden" for="id-entrance-email">Электронная почта</label>
+							<input class="form-entrance-email gllacy-field" type="email" id="id-entrance-email" placeholder="Электронная почта" title="Введите адрес электронной почты"  required>		
+							<label class="visually-hidden" for="id-entrance-password">Пароль</label>
+							<input class="form-entrance-password gllacy-field" type="password" id="id-entrance-password" placeholder="Пароль" title="Введите пароль" required>								
+							<div class="form-entrance-controls">
+								<button class="form-entrance-button btn btn-red btn-normal inline-link on-white-back" type="submit" title="Выполнить вход">Войти</button>
+								<div class="form-entrance-link-wrapper vertical">
+									<a class="form-entrance-link" href="#" title="Восстановление забытого пароля">Забыли пароль</a>
+									<a class="form-entrance-link" href="#" title="Новая регистрация">Новая регистрация</a>							
+								</div>
+							</div>				
+						</form>		
+
+							<a class="menu-link link-basket-empty btn"  title="Корзина">Пусто</a>								
 						</div>
 					</nav>
 
@@ -108,12 +109,12 @@
 						<li class="promo-item">
 							<b class="promo-item-title">Малинка даром!</b>
 							<p class="promo-item-text">При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
-							<a class="promo-item-button btn btn-red btn-normal btn-white-text on-dark-back" href="#">Хочу варенье!</a>
+							<a class="promo-item-button btn btn-red btn-normal btn-white-text" href="#">Хочу варенье!</a>
 						</li>
 						<li class="promo-item">
 							<b class="promo-item-title">Шоколадка даром</b>
 							<p class="promo-item-text">При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
-							<a class="promo-item-button btn btn-red btn-normal btn-white-text on-dark-back " href="#">Хочу шоколадки!</a>
+							<a class="promo-item-button btn btn-red btn-normal btn-white-text" href="#">Хочу шоколадки!</a>
 						</li>
 					</ul>
 				</section>
@@ -189,19 +190,19 @@
 						<h2 class="other-item-new-title">Новое в нашем блоге</h2>
 						<p class="other-item-new-details"><a class=" on-light" href="#">10 способов сервировки фруктовых щербетов к столу</a></p>	
 					</article>				 
-					<form class="other-item-subscribe other-item"  method="post" action="https://echo.htmlacademy.ru">
+					<form class="other-item-subscribe other-item"  method="get" action="https://echo.htmlacademy.ru">
 						<h2 class="visually-hidden">Подписка на рассылку</h2>			
 						<p class="other-item-subscribe-text">Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не cпамить и не слать всякой ненужной ерунды. Честно=)
 						</p>	
 						<input class="other-item-subscribe-email gllacy-field" type="email" placeholder="Электронная почта" required>	
-						<input class="other-item-subscribe-button btn btn-red btn-normal on-white-back" type="submit" value="Отправить" title="Подписаться на рассылку">			
+						<input class="other-item-subscribe-button btn btn-red btn-normal" type="submit" value="Отправить" title="Подписаться на рассылку">			
 					</form>		
 				</div>
 			</div>
 
 			<section class="map nothing-doingator">
 				<h2 class="map-title visually-hidden">Как найти</h2>		
-				<div class="map-info-wrapper">			
+				<div class="map-info-wrapper map-link" title="Для переключения между обычной и интерактивной картой - двойной щелчок мыши Перемещать и масштабировать карту возможно за пределами ширины контентной области.">			
 					<div class="map-info shadowed">
 						<p class="map-info-p">
 							<span>Адрес главного офиса</span>
@@ -214,10 +215,15 @@
 						<p class="map-info-p">Для заказов по телефону:</p>
 						<p class="map-info-p-bold">8 812 450-25-25</p>
 						<p class="map-info-p">(c 10 до 20, ежедневно)</p>		
-						<a class="map-info-feedback btn btn-red btn-normal on-white-back" href="feedback.html">Форма обратной связи</a>
+						<a class="map-info-feedback btn btn-red btn-normal" href="feedback.html">Форма обратной связи</a>
 					</div>			
 				</div> 
-				<img class="map-img" src="img/map.jpg" width="1200" height="430" alt="Наш магазин на карте (г.Санкт-Петербург, Ул. Большая Конюшенная, 19-8)">	
+				<div>
+					<a class="map-link" href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037999040354!2d30.322010416394033!3d59.938716271971415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2sBolshaya+Konyushennaya+ul.%2C+19%2C+Sankt-Peterburg%2C+Russia%2C+191186!5e0!3m2!1sen!2s!4v1441888483426" target="_blank"  title="Для переключения между обычной и интерактивной картой - двойной щелчок мыши. Перемещать и масштабировать карту возможно за пределами ширины контентной области.">
+						<img class="map-img" src="img/map.jpg" width="1200" height="430" alt="Наш магазин на карте (г.Санкт-Петербург, Ул. Большая Конюшенная, 19-8)">
+					</a>	
+					<iframe  class="map-iframe map-iframe-hide" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037999040354!2d30.322010416394033!3d59.938716271971415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2sBolshaya+Konyushennaya+ul.%2C+19%2C+Sankt-Peterburg%2C+Russia%2C+191186!5e0!3m2!1sen!2s!4v1441888483426" width="1200" height="430" allowfullscreen></iframe>
+				</div>
 			</section>
 
 			<div class="gllacy-wrapper">
@@ -253,19 +259,19 @@
 
 		</div>
 
-		<form class="form-feedback gllacy-form gllacy-flex-hide" id="id-form-feedback"  method="post" action="https://echo.htmlacademy.ru">
+		<form class="form-feedback gllacy-form gllacy-flex-hide" id="id-form-feedback"  method="post" action=""> <!---action="https://echo.htmlacademy.ru"> -->
 			<h2 class="visually-hidden">Форма обратной связи</h2>
 			<button class="form-feedback-close btn-close" type="button" title="Закрыть форму обратной связи">
 				<span class="visually-hidden">Закрыть</span>			
 			</button>
 			<p class="form-feedback-title">Мы обязательно Вам ответим!</p>
 			<label class="visually-hidden" for="id-feedback-name">Ваше имя</label>	
-			<input class="form-feedback-name form-feedback-item gllacy-field" type="text" id="id-feedback-name" placeholder="Как вас зовут?" title="Введите Ваше имя" required>	
+			<input class="form-feedback-name form-feedback-item gllacy-field" type="text" id="id-feedback-name" placeholder="Как вас зовут?" title="Введите Ваше имя" required>
 			<label class="visually-hidden" for="id-feedback-email">Адрес электронной почты</label>
 			<input class="form-feedback-email form-feedback-item gllacy-field" type="email" id="id-feedback-email" placeholder="Ваша почта для ответа?" title="Введите адрес электронной почты" required>		
 			<label class="visually-hidden" for="id-feedback-text">Ваше сообщение</label>
 			<textarea class="form-feedback-text  form-feedback-item gllacy-field" id="id-feedback-text" rows="8" placeholder="Напишите что-нибудь..." title="Введите текст Вашего сообщения" required></textarea>
-			<button class="form-feedback-button btn btn-red btn-normal inline-link on-white-back" type="submit" title="Отправить сообщение">Отправить</button>
+			<button class="form-feedback-button btn btn-red btn-normal inline-link" type="submit" title="Отправить сообщение">Отправить</button>
 		</form>	
 	  <script src="js/script.js"></script>
 	</body>
