--- a/catalog.html
+++ b/catalog.html
@@ -36,7 +36,7 @@
 							<a class="menu-link link-search btn" href="search.html" title="Поиск"><span class="visually-hidden">Поиск</span></a>
 							<form class="form-search gllacy-form gllacy-block-hide" id="id-search-form" method="post" action="https://echo.htmlacademy.ru">
 								<label class="visually-hidden" for="id-search-text">Текст для поиска</label>
-								<input class="form-search-text gllacy-field" type="search" id="id-search-text" placeholder="Что ищем" title="Введите текст для поиска">
+								<input class="form-search-text gllacy-field" type="search" id="id-search-text" placeholder="Что ищем" title="Введите текст для поиска" required>
 							</form>		
 						</li>		
 						<li class="personal-menu-item link-entrance-item">		
@@ -355,13 +355,13 @@
 			</section>
 
 			<ul class="pagination outer-paddingator">
-				<li><a class="pagination-link inline-link link-disabled">&#8249;</a></li>
+				<li><a class="pagination-link inline-link pagination-link-previous link-disabled">&#8249;</a></li>
 				<li><a class="pagination-link inline-link current">1</a></li>
 				<li><a class="pagination-link inline-link" href="#">2</a></li>
 				<li><a class="pagination-link inline-link" href="#">3</a></li>
 				<li><a class="pagination-link inline-link" href="#">4</a></li>
 				<li><a class="pagination-link inline-link" href="#">5</a></li>
-				<li><a class="pagination-link inline-link" href="#">&#8250;</a></li>
+				<li><a class="pagination-link inline-link pagination-link-next" href="#">&#8250;</a></li>
 			</ul>	
 
 			<footer class="footer inner-marginator">
@@ -374,8 +374,8 @@
 				<div class="footer-part footer-center"> 
 					<ul class="footer-menu">
 						<li><a class="footer-menu-link on-dark iconed" href="#" title="Информация для поставщиков">Для поставщиков</a></li>						
-						<li><a class="footer-menu-link on-dark" href="#" title="Информация о производстве">О производстве</a></li>
 						<li><a class="footer-menu-link on-dark" href="#" title="Наши документы">Наши документы</a></li>
+						<li><a class="footer-menu-link on-dark" href="#" title="Информация о производстве">О производстве</a></li>						
 						<li><a class="footer-menu-link on-dark" href="#" title="Экологические стандарты">Экологические стандарты</a></li>
 					</ul>		
 				</div>	
